[package]
name = "bz2github"
version = "0.1.0"
authors = ["Kris Taeleman <ktaeleman@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "^0.5"
serde = "^1.0"
serde_derive = "^1.0"
clap = "2.33.0"
serde_json = "^1.0"